# turbo

./: .env.shared  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Directory.Packages.props  README.md  Turboapi.sln  analysis_options.yaml  compose.databases.shared.yaml  compose.modulith.yaml  compose.services.yaml  compose.yaml  dart_test.yaml  firebase.json  otel-collector.yml  pubspec.yaml  renovate.json
apps/tileserver/: .gitignore  Cargo.toml  Dockerfile  PLAN_FMM.md  README.md
apps/tileserver/crates/turbo-tiles-admin/: Cargo.toml
apps/tileserver/crates/turbo-tiles-admin/src/: error.rs  lib.rs  state.rs
apps/tileserver/crates/turbo-tiles-api/: Cargo.toml
apps/tileserver/crates/turbo-tiles-api/src/: crash_dump.rs  dem_tile_cache.rs  error.rs  fonts.rs  lib.rs  mvt_tile_cache.rs  sprite.rs  state.rs
apps/tileserver/crates/turbo-tiles-artifacts/: Cargo.toml
apps/tileserver/crates/turbo-tiles-artifacts/src/: lib.rs
apps/tileserver/crates/turbo-tiles-auth/: Cargo.toml
apps/tileserver/crates/turbo-tiles-auth/src/: claims.rs  config.rs  extractor.rs  lib.rs
apps/tileserver/crates/turbo-tiles-bin/: Cargo.toml
apps/tileserver/crates/turbo-tiles-bin/src/: eval_terrain.rs  main.rs  routing_setup.rs
apps/tileserver/crates/turbo-tiles-build/: Cargo.toml
apps/tileserver/crates/turbo-tiles-build/src/: dem_builder.rs  graph_builder.rs  health.rs  lib.rs  mask_builder.rs  search_builder.rs  vector_builder.rs
apps/tileserver/crates/turbo-tiles-core/: Cargo.toml
apps/tileserver/crates/turbo-tiles-core/src/: bbox.rs  error.rs  lib.rs  resource.rs  route.rs  tile.rs
apps/tileserver/crates/turbo-tiles-db/: Cargo.toml  build.rs
apps/tileserver/crates/turbo-tiles-db/src/: error.rs  lib.rs  migrations.rs  pool.rs
apps/tileserver/crates/turbo-tiles-elev/: Cargo.toml
apps/tileserver/crates/turbo-tiles-elev/benches/: sample.rs
apps/tileserver/crates/turbo-tiles-elev/src/: cache.rs  dem.rs  format.rs  lib.rs
apps/tileserver/crates/turbo-tiles-elev/tests/: round_trip.rs
apps/tileserver/crates/turbo-tiles-fmm/: Cargo.toml
apps/tileserver/crates/turbo-tiles-fmm/src/: aniso.rs  elastica.rs  extract.rs  grid.rs  heap.rs  lib.rs  metric.rs  selling.rs  smooth.rs  solve.rs  stencil.rs  tobler.rs  tobler_aniso.rs
apps/tileserver/crates/turbo-tiles-fmm/tests/: aniso_geodesic.rs  eikonal_isotropic.rs  elastica_switchback.rs  tobler_isotropic.rs
apps/tileserver/crates/turbo-tiles-geom/: Cargo.toml
apps/tileserver/crates/turbo-tiles-geom/src/: lib.rs
apps/tileserver/crates/turbo-tiles-graph/: Cargo.toml
apps/tileserver/crates/turbo-tiles-graph/src/: lib.rs
apps/tileserver/crates/turbo-tiles-graph/tests/: round_trip.rs
apps/tileserver/crates/turbo-tiles-ingest/: Cargo.toml
apps/tileserver/crates/turbo-tiles-ingest/data/: n50_anchors_fixture.json
apps/tileserver/crates/turbo-tiles-ingest/sql/: upsert_n50_bygning.sql  upsert_n50_hoydekurve.sql  upsert_n50_isogbre.sql  upsert_n50_kystkontur.sql  upsert_n50_landcover.sql  upsert_n50_vann.sql  (+3 more)
apps/tileserver/crates/turbo-tiles-mask/: Cargo.toml
apps/tileserver/crates/turbo-tiles-mvt/: Cargo.toml
apps/tileserver/crates/turbo-tiles-pathfind/: Cargo.toml
apps/tileserver/crates/turbo-tiles-raster/: Cargo.toml
apps/tileserver/crates/turbo-tiles-routing/: Cargo.toml
apps/tileserver/crates/turbo-tiles-search/: Cargo.toml
apps/tileserver/crates/turbo-tiles-vector/: Cargo.toml
apps/tileserver/docs/: ingesting-n50.md  multi-waypoint-routing-plan.md  route-api.openapi.yaml  route-presets-plan.md  routing-analysis-2026-05-30.md  routing-app-api-plan.md  routing-roadmap-implementation-plan.md  unified-routing-2026-05-30.md
apps/tileserver/migrations/: 20260601000001_extensions.sql  20260601000002_paths_schema.sql  20260601000003_curated_route.sql  20260601000004_ingest_jobs.sql  20260601000005_views_resources.sql  20260601000006_pgrouting_costs.sql  20260601000007_dem_raster.sql  20260602000001_terrain_schema.sql  20260602000002_trails_schema.sql  20260602000003_anchors_schema.sql  20260602000004_recommend_schema.sql  20260602000005_paths_edge_terrain_attrs.sql  20260602000006_terrain_source_columns.sql  20260603000001_contour_schema.sql  20260603000002_resource_view_vocab.sql  20260603000003_building_schema.sql  20260603000004_coastline_schema.sql  20260603000005_provision_state.sql  20260603000006_basemap_overviews.sql  20260603000007_provision_source_version.sql  20260703000001_provision_source_metadata_version.sql
apps/tileserver/scripts/: pull-n50-fylke.sh
apps/tileserver/styles/: n50-topo.json
apps/tileserver/tools/: ROUTING_DEV_LOOP.md  basemap-layers.toml  build-norway.sh  cost-config.toml  dem_gaps.py  dev-serve-full.sh  dev-up.sh  eval_diff.py  ingest-all-n50-then-skeleton.sh  mimicry.py  open-app.sh  report_card.py  route-presets.toml  route-scenarios.toml  routing-baseline.json  routing_loop.py  run-e2e.sh  sample_terrain_corpus.py  seed-oslo-fixture.sql  seed-recommend-fixture.sql  slope_render.py  synth-dtm.py  terrain-corpus.toml  terrain_metrics.py  trail-mimicry.toml  vector-layers.toml  verify-primitives.sh  water_check.py
apps/tileserver/tools/e2e/: run.sh  seed.sql
apps/turbomap/: Cargo.toml  README.md
apps/turbomap/crates/turbomap-app/: Cargo.toml
apps/turbomap/crates/turbomap-clouds/: Cargo.toml  README.md
apps/turbomap/crates/turbomap-core/: Cargo.toml
apps/turbomap/crates/turbomap-engine/: Cargo.toml
apps/turbomap/crates/turbomap-ffi/: Cargo.toml  README.md
apps/turbomap/crates/turbomap-golden/: Cargo.toml  README.md
apps/turbomap/crates/turbomap-mvt/: Cargo.toml  build.rs
apps/turbomap/crates/turbomap-scene/: Cargo.toml
apps/turbomap/crates/turbomap-sim/: Cargo.toml
apps/turbomap/crates/turbomap-style-maplibre/: Cargo.toml
apps/turbomap/crates/turbomap-tiles-cache/: Cargo.toml
apps/turbomap/crates/turbomap-tiles-http/: Cargo.toml
apps/turbomap/crates/turbomap-tiles-pmtiles/: Cargo.toml
apps/turbomap/crates/turbomap-web/: Cargo.toml  README.md  build.sh
apps/turbomap/crates/turbomap-world/: Cargo.toml
apps/turbomap/tools/: water_shots.sh
(+3302 files in other folders)
