[workspace]
resolver = "2"
members = [
    "crates/turbomap-core",
    "crates/turbomap-mvt",
    "crates/turbomap-style-maplibre",
    "crates/turbomap-tiles-cache",
    "crates/turbomap-tiles-http",
    "crates/turbomap-tiles-pmtiles",
    "crates/turbomap-app",
    "crates/turbomap-clouds",
    "crates/turbomap-golden",
    "crates/turbomap-scene",
    "crates/turbomap-engine",
    "crates/turbomap-ffi",
    "crates/turbomap-sim",
]

[workspace.package]
edition = "2021"
rust-version = "1.92"
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
wgpu = "29"
winit = "0.30"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "gzip"], default-features = false }
crossbeam-channel = "0.5"
rayon = "1"
pollster = "0.3"
dirs = "5"
prost = "0.13"
prost-build = "0.13"
lyon = "1"
ab_glyph = "0.2"
rustybuzz = "0.20"
unicode-bidi = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# FFI bindings for Kotlin/Swift hosts. "cli" is needed by the bundled
# uniffi-bindgen binary that generates the foreign-language sources.
uniffi = { version = "0.29", features = ["cli"] }
# UI overlay for the desktop demo. egui is the only crate in the
# workspace that consumes these — kept here so versions stay in sync
# with the workspace wgpu (egui 0.34 targets wgpu 29).
egui = "0.34"
egui-wgpu = { version = "0.34", features = ["winit"] }
egui-winit = "0.34"

# Workspace-level lints: match apps/tileserver's strict posture.
[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
