[package]
name = "turbo-tiles-admin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
turbo-tiles-core.workspace = true
turbo-tiles-db.workspace = true
turbo-tiles-auth.workspace = true
turbo-tiles-ingest.workspace = true
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
http.workspace = true
gpx.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
bytes.workspace = true
base64 = "0.22"
libc = "0.2"
jsonwebtoken.workspace = true
