[package]
name = "turbo-tiles-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
turbo-tiles-core.workspace = true
turbo-tiles-db.workspace = true
turbo-tiles-mvt.workspace = true
turbo-tiles-auth.workspace = true
sqlx.workspace = true
axum.workspace = true
tower-http.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
http.workspace = true
bytes.workspace = true
