[package]
name = "turbo-tiles-artifacts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Format definitions shared by every primitive: magic numbers, common
# header layout, on-disk path conventions. Pure, no I/O.

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
byteorder.workspace = true
