[package]
name = "turbo-tiles-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
turbo-tiles-core.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
http.workspace = true
