[package]
name = "turbo-tiles-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "tileserver"
path = "src/main.rs"

[dependencies]
turbo-tiles-core.workspace = true
turbo-tiles-db.workspace = true
turbo-tiles-mvt.workspace = true
turbo-tiles-auth.workspace = true
turbo-tiles-api.workspace = true
turbo-tiles-admin.workspace = true
turbo-tiles-ingest.workspace = true
turbo-tiles-routing.workspace = true

axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
