[package]
name = "turbo-tiles-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "tileserver"
path = "src/main.rs"

[dependencies]
turbo-tiles-core.workspace = true
turbo-tiles-db.workspace = true
turbo-tiles-mvt.workspace = true
turbo-tiles-auth.workspace = true
turbo-tiles-api.workspace = true
turbo-tiles-admin.workspace = true
turbo-tiles-ingest.workspace = true
turbo-tiles-build.workspace = true
turbo-tiles-elev.workspace = true
turbo-tiles-mask.workspace = true
turbo-tiles-graph.workspace = true
turbo-tiles-search.workspace = true
turbo-tiles-pathfind.workspace = true
turbo-tiles-vector.workspace = true
toml = "0.8"

axum.workspace = true
tower-http.workspace = true
tower = "0.4"
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
