[package]
name = "turbo-tiles-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "tileserver"
path = "src/main.rs"

[dependencies]
turbo-tiles-core.workspace = true
turbo-tiles-db.workspace = true
turbo-tiles-mvt.workspace = true
turbo-tiles-auth.workspace = true
turbo-tiles-api.workspace = true
turbo-tiles-admin.workspace = true
turbo-tiles-ingest.workspace = true
turbo-tiles-build.workspace = true
turbo-tiles-elev.workspace = true
turbo-tiles-mask.workspace = true
turbo-tiles-graph.workspace = true
turbo-tiles-search.workspace = true
turbo-tiles-pathfind.workspace = true
turbo-tiles-vector.workspace = true
toml = "0.8"
libc = "0.2"
# Heap allocation profiler, opt-in via the `dhat-heap` feature. Off by
# default (a global-allocator shim that taxes every alloc); built only
# for `eval-terrain` profiling runs of the architecture perf work.
dhat = { version = "0.3", optional = true }

axum.workspace = true
tower-http.workspace = true
tower = "0.4"
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
# Build with `--features dhat-heap` to capture a per-allocation heap
# profile of a run (writes dhat-heap.json + prints peak/total bytes).
# See tools/ROUTING_DEV_LOOP.md.
dhat-heap = ["dep:dhat"]
