[package]
name = "turbo-tiles-geom"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Pure-function geometry kernel: intersection length, line crossings,
# point-in-polygon, AABB clip. No I/O, no allocator-heavy types
# beyond Vec — designed to be the bedrock every vector cost layer
# stands on. Property-tested against Shapely ground truth.

[dependencies]
serde = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true, features = ["derive"] }

[dev-dependencies]
