[package]
name = "turbo-tiles-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Routing graph primitive. CSR adjacency on mmap'd disk + Dijkstra/A*
# in-process. Pre-computed per-profile cost table baked at build time.

[dependencies]
turbo-tiles-artifacts.workspace = true
turbo-tiles-core.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
memmap2.workspace = true
byteorder.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
rstar.workspace = true

[dev-dependencies]
tempfile = "3"
