[package]
name = "turbomap-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Desktop host for the turbomap renderer (winit + wgpu)."

[[bin]]
name = "turbomap"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
turbomap-core = { path = "../turbomap-core" }
turbomap-tiles-http = { path = "../turbomap-tiles-http" }
turbomap-style-maplibre = { path = "../turbomap-style-maplibre" }
wgpu.workspace = true
winit.workspace = true
log.workspace = true
env_logger.workspace = true
crossbeam-channel.workspace = true
rayon.workspace = true
pollster.workspace = true
dirs.workspace = true
image.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true

[dev-dependencies]
# Used by the dem-probe example only; not pulled into the desktop bin.
reqwest = { workspace = true }
