[package]
name = "turbomap-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Desktop host for the turbomap renderer (winit + wgpu)."

[[bin]]
name = "turbomap"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
turbomap-core = { path = "../turbomap-core" }
# The app authors content as Scene IR (plan P6.2) — see `styles.rs`.
turbomap-scene = { path = "../turbomap-scene" }
# Direct dep (already transitive via core) so the desktop "Clouds" debug
# panel can build a synthetic radar sequence + select pipeline debug views
# without booting a device. See `app.rs`.
turbomap-clouds = { path = "../turbomap-clouds" }
turbomap-tiles-http = { path = "../turbomap-tiles-http" }
turbomap-style-maplibre = { path = "../turbomap-style-maplibre" }
wgpu.workspace = true
winit.workspace = true
log.workspace = true
env_logger.workspace = true
crossbeam-channel.workspace = true
rayon.workspace = true
pollster.workspace = true
dirs.workspace = true
# JPEG on top of the workspace's PNG: the scenario harness's satellite basemap
# (Esri World Imagery) serves JPEG tiles, which won't decode with png-only.
image = { workspace = true, features = ["jpeg"] }
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true

[dev-dependencies]
# Used by the dem-probe example only; not pulled into the desktop bin.
reqwest = { workspace = true }
# The P6.2 fidelity gate in `styles.rs` compiles the hand-authored IR
# layers through the engine's scene→VectorStyle lowering (pure functions —
# no GPU booted) and compares against the styles app.rs hand-built so far.
turbomap-engine = { path = "../turbomap-engine" }
