[package]
name = "turbomap-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Desktop host for the turbomap renderer (winit + wgpu)."

[[bin]]
name = "turbomap"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
turbomap-core = { path = "../turbomap-core" }
# The app authors content as Scene IR (plan P6.2) — see `styles.rs` and
# `SceneState::scene` in `app.rs`.
turbomap-scene = { path = "../turbomap-scene" }
# The app IS an engine host (plan P6.2): it owns a `TurbomapEngine`,
# applies Scene documents, and drives the streaming plan. The engine's
# codec owns every tile decode; the app pumps raw bytes only.
turbomap-engine = { path = "../turbomap-engine" }
# Direct dep (already transitive via core) so the desktop "Clouds" debug
# panel can build a synthetic radar sequence + select pipeline debug views
# without booting a device. See `app.rs`.
turbomap-clouds = { path = "../turbomap-clouds" }
turbomap-tiles-http = { path = "../turbomap-tiles-http" }
turbomap-style-maplibre = { path = "../turbomap-style-maplibre" }
wgpu.workspace = true
winit.workspace = true
log.workspace = true
env_logger.workspace = true
crossbeam-channel.workspace = true
rayon.workspace = true
pollster.workspace = true
dirs.workspace = true
# The marker GeoJSON source is authored with serde_json (plan P6.2).
serde_json.workspace = true
# ONLY for the diagnostic framebuffer dump (`TURBOMAP_DUMP_DIR`) — render
# OUTPUT encoding, not tile ingestion (tile decode lives in the engine's
# codec since P6.2). JPEG stays on for the scenario harness examples.
image = { workspace = true, features = ["jpeg"] }
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true

[dev-dependencies]
# Used by the dem-probe example only; not pulled into the desktop bin.
reqwest = { workspace = true }
