[package]
name = "turbomap-mvt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Mapbox Vector Tile (MVT) decoder. Pure data — no I/O, no rendering."

[lints]
workspace = true

[dependencies]
prost.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true
