[package]
name = "turbomap-scene"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Renderer-agnostic Scene/Expr IR, scene diff, and the MapEngine contract."

[lints]
workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
