[package]
name = "turbomap-scene"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Renderer-agnostic Scene/Expr IR, scene diff, and the MapEngine contract."

[lints]
workspace = true

[dependencies]
serde.workspace = true
# The reference ModelEngine parses geo-json point content for its hit-test
# (plan P6.4) — the one place the IR crate touches JSON at runtime.
serde_json.workspace = true
