[package]
name = "turbomap-style-maplibre"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Lower a MapLibre Style Spec subset onto turbomap-core's VectorStyle."

[lints]
workspace = true

[dependencies]
turbomap-core = { path = "../turbomap-core" }
turbomap-scene = { path = "../turbomap-scene" }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
# The P6.2 fidelity gate compiles the emitted Scene IR layers through the
# engine's scene→VectorStyle lowering (a pure function — no GPU booted) and
# compares the rules against `parse_style`'s core VectorStyle output.
turbomap-engine = { path = "../turbomap-engine" }
